tests/baselines/reference/computedPropertyNames42_ES6.errors.txt
computedPropertyNames42_ES6.ts(8,5): error TS2411: Property '[""]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.


==== computedPropertyNames42_ES6.ts (1 errors) ====
    class Foo { x }
    class Foo2 { x; y }
    
    class C {
        [s: string]: Foo2;
    
        // Computed properties
        [""]: Foo;
        ~~~~
!!! error TS2411: Property '[""]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.
    }